tests/ui/impl-trait/in-trait/refine-err.stderr
error[E0412]: cannot find type `T` in this scope
  --> $DIR/refine-err.rs:4:38
   |
LL |     fn prepare(self) -> impl Fn() -> T;
   |                                      ^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
